--- a/style.css
+++ b/style.css
@@ -188,6 +188,8 @@ text-align: center;
 margin-top: 0px;
 float: right;
 margin: 0px 5px 45px 0px;
+	position: relative;
+	display: inline-block;
 }
 .cover{
 	display: block;
@@ -297,4 +299,13 @@ iframe {
 span {
 	color: maroon;
 	font-family: "Bookman Old Style", sans-serif;
+}
+img ::before{
+	position: absolute;
+	content: "";
+	display: block;
+	height: 50px;
+	width: 50px;
+	background-color: rgba(46,204,113, 0.6);
+	z-index: 10;
 }
