--- a/style.css
+++ b/style.css
@@ -180,7 +180,7 @@ text-align: center;
 margin: 5px 0px 20px 0px;
 }
 ul .faces li {
-	display: inline;
+	display: inline-block;
 	list-style-type: none;
 }
 .faces li img {
@@ -191,17 +191,6 @@ margin: 0px 5px 45px 0px;
 	position: relative;
 	display: inline-block;
 }
-.cover{
-	display: block;
-	position: absolute;
-	top: 0;
-	left: 0;
-	height: 50px;
-	width: 50px;
-	z-index: 10;
-	background-color: rgba(46,204,113,0.2);
-}
-
 .bottom-caption {
 color: #222;
 text-align: center;
@@ -306,7 +295,6 @@ span {
 	display: block;
 	height: 50px;
 	width: 50px;
-	background-color: rgba(46,204,113, 0.1);
-
+	background-color: rgba(46,204,113, 0.5);
 	z-index: 10;
 }
